# speedrun

./: .gitignore  Dockerfile  README.md  pyproject.toml
speedrun/: __init__.py
speedrun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
speedrun/templates/: index.html
