[tool.poetry]
name = "speedrun"
version = "0.1.0"
description = "Plots speedrun times since a games release."
homepage = "https://github.com/hrfee/speedrun"
repository = "https://github.com/hrfee/speedrun"
authors = ["Harvey Tindall <harveyltindall@gmail.com>"]
readme = "README.md"
license = "MIT"
include = ["speedrun/templates/*"]

[tool.poetry.dependencies]
python = "^3.6.1"
srcomapi = "^0.3.1"
plotly = "^4.8.2"
pandas = "^1.0.5"
Flask = "^1.1.2"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[tool.poetry.scripts]
speedrun-serve = 'speedrun:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
